--- a/src/agentic_stock/config/tasks.yaml
+++ b/src/agentic_stock/config/tasks.yaml
@@ -1,17 +1,17 @@
 research_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
+    Conduct a thorough stock research about {Stock}
+    Make sure you find any interesting and relevant insight given
     the current date is {current_date}.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
+    A list with 10 bullet points of the most relevant insights about {Stock}
   agent: researcher
 
 reporting_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
+    Review the context you got and expand each insight into a full section for a report.
     Make sure the report is detailed and contains any and all relevant information.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
+    A fully fledged report with the main insight, each with a full section of information.
     Formatted as markdown without '```'
   agent: reporting_analyst
