--- a/src/agentic_stock/config/tasks.yaml
+++ b/src/agentic_stock/config/tasks.yaml
@@ -20,6 +20,7 @@ sentiment_analysis_task:
   description: >
     Analyze the sentiment surrounding {Stock} using the latest news, social media, 
     and financial forums. Determine whether the market sentiment is bullish, bearish, or neutral.
+    Ask user input for more information if needed.
   expected_output: >
     A sentiment score (-1 to +1) along with a summary explaining the general mood 
     and key reasons behind the sentiment.
@@ -29,6 +30,7 @@ fundamental_analysis_task:
   description: >
     Evaluate {Stock}'s financial health by analyzing earnings reports, balance sheets, 
     income statements, cash flow, and key valuation ratios.
+    Ask user input for more information if needed.
   expected_output: >
     A financial summary with key ratios (P/E, P/B, ROE, etc.), intrinsic valuation insights, 
     and an assessment of whether {Stock} is overvalued, undervalued, or fairly priced.
@@ -39,6 +41,7 @@ technical_analysis_task:
     Analyze {Stock}'s historical price movements, trading volume, and chart patterns.
     Identify key technical indicators such as support/resistance levels, moving averages, 
     RSI, and MACD signals.
+    Ask user input for more information if needed.
   expected_output: >
     A technical analysis report with key trend patterns, possible entry/exit points, 
     and indicators suggesting future price movements.
@@ -48,6 +51,7 @@ risk_assessment_task:
   description: >
     Identify the key risks associated with investing in {Stock}, including 
     market risks, industry-specific risks, macroeconomic risks, and company-related risks.
+    Ask user input for more information if needed.
   expected_output: >
     A risk report outlining potential downside factors, historical volatility analysis, 
     and risk mitigation strategies.
@@ -57,6 +61,7 @@ final_recommendation_task:
   description: >
     Consolidate insights from all analyses (research, sentiment, fundamentals, 
     technicals, and risk) to generate a final buy, hold, or sell recommendation for {Stock}.
+    Ask user input for more information if needed.
   expected_output: >
     A final recommendation (Buy/Hold/Sell) with a summary of supporting reasons 
     and confidence level in the decision.
